--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Sobre nós</a></li>
                 <li><a href="#">Contato</a></li>
+                <li><a href="#">Produtos</a></li>
             </ul>
         </nav>
     </header>
