adicionado a segunda parte dos contatos

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             <h2>Aqui deve conter uma seção de Contato</h2>
             <p>xxxxxxxxxx</p>
             <p>xxxxxxxxxx</p>
-            <p>xxxxxxxxxxx</p>
+            <p>Email: help@bonsaitech.com</p>
+            <p>Horário de atendimento: 08:00-18:00</p>
         </section>
     </main>
     <footer>
