--- a/index.html
+++ b/index.html
@@ -104,11 +104,10 @@
             <img src="imagens/nosso-time.jpg" alt="Nossa Equipe">
         </section>
         <section>
-            <h2>Aqui deve conter uma seção de Contato</h2>
-            <p>xxxxxxxxxx</p>
-            <p>xxxxxxxxxx</p>
-            <p>Email: help@bonsaitech.com</p>
-            <p>Horário de atendimento: 08:00-18:00</p>
+            <h2>Entre em Contato</h2>
+            <p>Whatsapp: 11 99999-9999</p>
+            <p>Email: contato@socialconnect.com.br</p>
+            <p>Horário de atendimento: 09:00h às 18:00h</p>
         </section>
     </main>
     <footer>
