--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <main>
         <section>
             <h2>Sobre nós</h2>
-            <p>A Social Connect é uma empresa inovadora que te conecta com as pessoas certas.</p>
-            <p>Nossa plataforma oferece usuários podem criar perfis, compartilhar atualizações, seguir outros usuários e interagir por meio de mensagens privadas.</p>
+            <p>A Social Connect é uma empresa inovadora de carros focada no setor automotivo que busca fabricar carros elétricos de alta performance.</p>
+            <p>Nosso site oferece carros com a cara de cada cliente.</p>
         </section>
         <section>
             <h2>Nossa Equipe</h2>
@@ -115,8 +115,8 @@
         <p>&copy; 2021 Soia Cnnt. Tds s dritos rsedos.</p>
         </section>
         <section id="socialmedia">
-            <span>xxxxx</span>
-            <span>xxxxxx</span>
+            <span>@socialconnect</span>
+            <span>linkedin/socialconnect</span>
         </section>
     </footer>
 </body>
